
[project]
name = "rap-package-template"
version = "1.0.0"
authors = [
    { name="Data Science Skilled team", email="datascience@nhs.net" }
]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://nhsdigital.github.io/rap-community-of-practice/"

[tool.poetry]
name = "llm_tutorial"
version = "0.1.0"
description = ""
authors = ["Sam Hollings <sam.hollings1@nhs.net>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.322"
anthropic = "^0.5.0"
chromadb = "^0.4.14"
jupyterlab = "^4.0.7"
sentence-transformers = "^2.2.2"
ipykernel = "^6.26.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"